@@ -626,8 +626,8 @@ static Bool runtime_array_range_check = MY_FALSE;
    */
 
 #ifdef APPLY_CACHE_STAT
-p_uint apply_cache_hit  = 0;
-p_uint apply_cache_miss = 0;
+statcounter_t apply_cache_hit  = 0;
+statcounter_t apply_cache_miss = 0;
   /* Number of hits and misses in the apply cache.
    */
 #endif
